fix: xs size for mobile logo and navigation overflow scroll fix

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -12,7 +12,11 @@
     &__logo {
         @apply z-40 font-display text-4xl text-center m-0 flex-shrink-0;
 
-        width: 300px;
+        width: 220px;
+
+        @screen xs {
+            width: 300px;
+        }
 
         a {
             @apply relative z-40 block bg-auto bg-no-repeat bg-center indent-full w-full overflow-hidden;
